k3d/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-ok
  labels:
    app: echo-ok
spec:
    replicas: 1
    selector:
      matchLabels:
        app: echo-ok-pod
    template:
      metadata:
        labels:
          app: echo-ok-pod
      spec:
        containers:
        - name: echo-ok
          image: k3d-arm-registry:5000/arm-echo:latest
          resources:
            limits:
              cpu: 20m
              memory: 1Gi
          ports:
          - containerPort: 1323

---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: mysql
# spec:
#   selector:
#     matchLabels:
#       app: mysql
#   strategy:
#     type: Recreate
#   template:
#     metadata:
#       labels:
#         app: mysql
#     spec:
#       containers:
#       - image: arm64v8/mysql:oracle
#         name: mysql
#         resources:
#             limits:
#               cpu: 20m
#               memory: 1Gi
#             requests:
#               cpu: 20m
#               memory: 512Mi
#         env:
#         - name: MYSQL_DATABASE
#           value: db-name
#         - name: MYSQL_USER
#           value: db-user
#         - name: MYSQL_PASSWORD
#           value: db-pass
#         - name: MYSQL_ROOT_PASSWORD
#           value: password
#         ports:
#         - containerPort: 3306
#           protocol: TCP
#         volumeMounts:
#         - name: mysql-persistent-storage
#           mountPath: /var/lib/mysql
#       volumes:
#       - name: mysql-persistent-storage
#         persistentVolumeClaim:
#           claimName: mysql-pv-claim
