k3d/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ok-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /echo
            pathType: Prefix
            backend:
              service:
                name: echo-ok-service
                port:
                  number: 1323

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  labels:
    name: mysql-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mysql-service
                port:
                  number: 3306

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  labels:
    name: whoami-ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /whoami
            backend:
              service:
                name: whoami-service
                port:
                  number: 9999
---
